fix: simplify button visibility logic and remove unnecessary leftPadding style

--- a/dashboard/src/scss/layout/_sidebar.scss
+++ b/dashboard/src/scss/layout/_sidebar.scss
@@ -56,9 +56,6 @@
   .v-list-item--density-default.v-list-item--one-line {
     min-height: 40px;
   }
-  .leftPadding {
-    margin-left: 4px;
-  }
 }
 .v-navigation-drawer--rail {
   .scrollnavbar .v-list .v-list-group__items,
